--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<title>Your life</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+	<section class="hero text-center">
+		<nav>
+			<div><a href="#">home</a></div>
+			<div><a href="#">photoapp</a></div>
+			<div><a href="#"><img src="https://i.imgur.com/zcyC3m0.png" alt="livello 2"></a></div>
+			<div><a href="#">design</a></div>
+			<div><a href="#">download</a></div>
+		</nav>
+
+		<h1>your life , a photo</h1>
+		<p>print your life in a simple photo</p>
+		<a href="#"><button class="started-btn">get started</button></a>
+
+		<div class="hero-icons">
+			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-flickr" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+		</div>
+	</section>
+
+	<section class="about-us">
+		<div class="container">
+			<div class="col col-xs-12 col-md-6">
+				<h2>represent your life with a  simple photo</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
+			</div>
+
+			<div class="col col-xs-12 col-md-6">
+		</div>
+	</section>
+</body>
+</html>
