--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<h1>your life , a photo</h1>
 		<p>print your life in a simple photo</p>
-		<a href="#"><button class="started-btn">get started</button></a>
+		<a href="#"><button class="started-btn-1">get started</button></a>
 
 		<div class="hero-icons">
 			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -34,12 +34,17 @@
 
 	<section class="about-us">
 		<div class="container">
-			<div class="col col-xs-12 col-md-6">
-				<h2>represent your life with a  simple photo</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
-			</div>
+			<div class="row">
+				<div class="col col-xs-12 col-lg-6">
+					<h2>represent your life with a  simple photo</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
+					<a href="#"><button class="started-btn-2">get started</button></a>
+				</div>
 
-			<div class="col col-xs-12 col-md-6">
+				<div class="col col-xs-12 col-lg-6">
+					<img src="https://i.imgur.com/YtyEzfT.png" alt="Iphone in hand">
+				</div>
+			</div>
 		</div>
 	</section>
 </body>
