--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 	<section class="about-us">
 		<div class="container">
 			<div class="row">
-				<div class="col col-xs-12 col-lg-6">
+				<div class="col col-xs-12 col-md-6">
 					<h2>represent your life with a  simple photo</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
 					<a href="#"><button class="started-btn-2">get started</button></a>
 				</div>
 
-				<div class="col col-xs-12 col-lg-6">
+				<div class="col col-xs-12 col-md-6">
 					<img src="https://i.imgur.com/YtyEzfT.png" alt="Iphone in hand">
 				</div>
 			</div>
