--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+	<!-- HERO -->
 	<section class="hero text-center">
 		<nav>
 			<div><a href="#">home</a></div>
@@ -32,6 +33,7 @@
 		</div>
 	</section>
 
+	<!-- ABOUT US -->
 	<section class="about-us">
 		<div class="container">
 			<div class="row">
@@ -47,5 +49,57 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- OFFER -->
+	<section class="offer">
+		<div class="container">
+			<div class="row">
+				<div class="col col-xs-12 col-md-6">
+					<img src="https://i.imgur.com/yFUGHtw.png" alt="Green mobile phone">
+				</div>
+				<div class="col col-xs-12 col-md-6">
+					<div id="carousel-1" class="carousel slide" data-ride="carousel" data-interval="4000" data-pause="hover">
+						<div class="carousel-inner" role="listbox">
+    						<div class="item active">
+    							<h2>design</h2>
+    							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
+    							<a href="#"><button class="learn-more-btn">learn more</button></a>
+    							<h4>01/05</h4>
+    						</div>
+    						<div class="item">
+    							<h2>photoapp</h2>
+    							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
+    							<a href="#"><button class="learn-more-btn">learn more</button></a>
+    							<h4>02/05</h4>
+    						</div>
+    						<div class="item">
+    							<h2>download</h2>
+    							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
+    							<a href="#"><button class="learn-more-btn">learn more</button></a>
+    							<h4>03/05</h4>
+    						</div>
+    						<div class="item">
+    							<h2>get started</h2>
+    							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
+    							<a href="#"><button class="learn-more-btn">learn more</button></a>
+    							<h4>04/05</h4>
+    						</div>
+    						<div class="item">
+    							<h2>contact</h2>
+    							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. Ut <strong>enim ad minim</strong> veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.</p>
+    							<a href="#"><button class="learn-more-btn">learn more</button></a>
+    							<h4>05/05</h4>
+    						</div>
+    					</div>
+					</div>
+				</div>
+
+				<i class="fa fa-angle-left" aria-hidden="true"></i>
+				<i class="fa fa-angle-right" aria-hidden="true"></i>
+			</div>
+		</div>
+	</section>
+
+	<script src="script.js"></script>
 </body>
 </html>
