--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<nav>
 			<div><a href="#">home</a></div>
 			<div><a href="#">photoapp</a></div>
-			<div><a href="#"><img src="https://i.imgur.com/zcyC3m0.png" alt="livello 2"></a></div>
+			<div><a href="#"><img src="https://i.imgur.com/zcyC3m0.png" alt="livello"></a></div>
 			<div><a href="#">design</a></div>
 			<div><a href="#">download</a></div>
 		</nav>
@@ -96,6 +96,87 @@
 
 				<i class="fa fa-angle-left" aria-hidden="true"></i>
 				<i class="fa fa-angle-right" aria-hidden="true"></i>
+			</div>
+		</div>
+	</section>
+
+	<!-- GALLERY -->
+	<section class="gallery">
+		<div class="container">
+			<div class="row">
+				<div class="col col-xs-12 col-md-4">
+					<div class="gallery-text-wrapper">
+						<img src="https://i.imgur.com/De6xkiu.png" alt="livello">
+						<h4>our community</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+					</div>
+				</div>
+
+				<div class="col carousel-wrapper col-xs-12 col-md-8">
+					<div id="carousel-2" class="carousel slide" data-ride="carousel" data-interval="4000" data-pause="hover">
+						<div class="carousel-inner" role="listbox">
+							<div class="item active">
+								<div class="row">
+									<div class="col col-xs-12 col-sm-6">
+										<img src="https://i.imgur.com/0hfupre.png" alt="">
+									</div>
+									<div class="col col-xs-12 col-sm-6">
+										<img class="image-right" src="https://i.imgur.com/sJXqAHz.png" alt="">
+									</div>
+								</div>
+							</div>
+
+							<div class="item">
+								<div class="row">
+									<div class="col col-xs-12 col-sm-6">
+										<img src="https://i.imgur.com/DugIuAb.jpg" alt="">
+									</div>
+									<div class="col col-xs-12 col-sm-6">
+										<img class="image-right" src="https://i.imgur.com/ISQHX1S.jpg" alt="">
+									</div>
+								</div>
+							</div>
+
+							<div class="item">
+								<div class="row">
+									<div class="col col-xs-12 col-sm-6">
+										<img src="https://i.imgur.com/9Gm830K.jpg" alt="">
+									</div>
+									<div class="col col-xs-12 col-sm-6">
+										<img class="image-right" src="https://i.imgur.com/F2rQppN.jpg" alt="">
+									</div>
+								</div>
+							</div>
+
+							<div class="item">
+								<div class="row">
+									<div class="col col-xs-12 col-sm-6">
+										<img src="https://i.imgur.com/3JY4aMa.jpg" alt="">
+									</div>
+									<div class="col col-xs-12 col-sm-6">
+										<img class="image-right" src="https://i.imgur.com/wamVaMN.jpg" alt="">
+									</div>
+								</div>
+							</div>
+
+							<div class="item">
+								<div class="row">
+									<div class="col col-xs-12 col-sm-6">
+										<img src="https://i.imgur.com/dJkG3yx.jpg" alt="">
+									</div>
+									<div class="col col-xs-12 col-sm-6">
+										<img class="image-right" src="https://i.imgur.com/7TsMyNh.jpg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="arrows-wrapper">
+							<i class="fa fa-angle-left" aria-hidden="true"></i>
+							<i class="fa fa-angle-right" aria-hidden="true"></i>
+						</div>
+					</div>	
+				</div>
 			</div>
 		</div>
 	</section>
