--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 										<img src="https://i.imgur.com/dJkG3yx.jpg" alt="">
 									</div>
 									<div class="col col-xs-12 col-sm-6">
-										<img class="image-right" src="https://i.imgur.com/7TsMyNh.jpg" alt="">
+										<img class="image-right" src="https://images.pexels.com/photos/257360/pexels-photo-257360.jpeg?h=350&auto=compress&cs=tinysrgb" alt="">
 									</div>
 								</div>
 							</div>
@@ -178,6 +178,17 @@
 					</div>	
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<!-- SUBSCRIBE -->
+	<section class="subscribe">
+		<div>
+			<h2>subscribe to us community</h2>
+			<form>
+				<input type="text" placeholder="YOUR EMAIL">
+				<button><i class="fa fa-check" aria-hidden="true"></i></button>
+			</form>
 		</div>
 	</section>
 
