--- a/index.html
+++ b/index.html
@@ -118,21 +118,10 @@
 							<div class="item active">
 								<div class="row">
 									<div class="col col-xs-12 col-sm-6">
-										<img src="https://i.imgur.com/0hfupre.png" alt="">
+										<img src="https://i.imgur.com/0hfupre.png" alt="Old bus">
 									</div>
 									<div class="col col-xs-12 col-sm-6">
-										<img class="image-right" src="https://i.imgur.com/sJXqAHz.png" alt="">
-									</div>
-								</div>
-							</div>
-
-							<div class="item">
-								<div class="row">
-									<div class="col col-xs-12 col-sm-6">
-										<img src="https://i.imgur.com/DugIuAb.jpg" alt="">
-									</div>
-									<div class="col col-xs-12 col-sm-6">
-										<img class="image-right" src="https://i.imgur.com/ISQHX1S.jpg" alt="">
+										<img class="image-right" src="https://i.imgur.com/sJXqAHz.png" alt="Wet wet wet">
 									</div>
 								</div>
 							</div>
@@ -140,21 +129,10 @@
 							<div class="item">
 								<div class="row">
 									<div class="col col-xs-12 col-sm-6">
-										<img src="https://i.imgur.com/9Gm830K.jpg" alt="">
+										<img src="https://i.imgur.com/DugIuAb.jpg" alt="Pasta party">
 									</div>
 									<div class="col col-xs-12 col-sm-6">
-										<img class="image-right" src="https://i.imgur.com/F2rQppN.jpg" alt="">
-									</div>
-								</div>
-							</div>
-
-							<div class="item">
-								<div class="row">
-									<div class="col col-xs-12 col-sm-6">
-										<img src="https://i.imgur.com/3JY4aMa.jpg" alt="">
-									</div>
-									<div class="col col-xs-12 col-sm-6">
-										<img class="image-right" src="https://i.imgur.com/wamVaMN.jpg" alt="">
+										<img class="image-right" src="https://i.imgur.com/ISQHX1S.jpg" alt="Forest fruits">
 									</div>
 								</div>
 							</div>
@@ -162,10 +140,32 @@
 							<div class="item">
 								<div class="row">
 									<div class="col col-xs-12 col-sm-6">
-										<img src="https://i.imgur.com/dJkG3yx.jpg" alt="">
+										<img src="https://i.imgur.com/9Gm830K.jpg" alt="Halfway Right">
 									</div>
 									<div class="col col-xs-12 col-sm-6">
-										<img class="image-right" src="https://images.pexels.com/photos/257360/pexels-photo-257360.jpeg?h=350&auto=compress&cs=tinysrgb" alt="">
+										<img class="image-right" src="https://i.imgur.com/F2rQppN.jpg" alt="Alfa Romeo">
+									</div>
+								</div>
+							</div>
+
+							<div class="item">
+								<div class="row">
+									<div class="col col-xs-12 col-sm-6">
+										<img src="https://i.imgur.com/3JY4aMa.jpg" alt="Group of people">
+									</div>
+									<div class="col col-xs-12 col-sm-6">
+										<img class="image-right" src="https://i.imgur.com/wamVaMN.jpg" alt="Shoes">
+									</div>
+								</div>
+							</div>
+
+							<div class="item">
+								<div class="row">
+									<div class="col col-xs-12 col-sm-6">
+										<img src="https://i.imgur.com/dJkG3yx.jpg" alt="Lake">
+									</div>
+									<div class="col col-xs-12 col-sm-6">
+										<img class="image-right" src="https://images.pexels.com/photos/257360/pexels-photo-257360.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Nature">
 									</div>
 								</div>
 							</div>
@@ -191,6 +191,47 @@
 			</form>
 		</div>
 	</section>
+
+	<!-- DOWNLOAD -->
+	<section class="download">
+		<div class="download-container">
+			<h2>download it</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			<div class="row">
+				<div class="col col-xs-12 col-sm-6">
+					<a href="#">
+						<div class="download-btn-wrapper">
+							<button class="download-left-btn">apple store</button>
+							<button class="download-right-btn"><i class="fa fa-apple" aria-hidden="true"></i></button>
+						</div>
+					</a>
+				</div>
+				<div class="col col-xs-12 col-sm-6">
+					<a href="#">
+						<div class="download-btn-wrapper">
+							<button class="download-left-btn">play store</button>
+							<button class="download-right-btn"><i class="fa fa-android" aria-hidden="true"></i></button>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- FOOTER -->
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col col-xs-12 col-sm-11">
+					<a href="#">credits</a> <span>|</span> <a href="#">privacy</a> <span>|</span> <a href="#">our teams</a>
+					<p>Copyright by phototime - all right reserved.</p>
+				</div>
+				<div class="col col-xs-12 col-sm-1">
+					<img src="https://i.imgur.com/4K8Y3I0.png" alt="livello">
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="script.js"></script>
 </body>
