--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 		<div>
 			<h2>subscribe to us community</h2>
 			<form>
-				<input type="text" placeholder="YOUR EMAIL">
+				<input type="email" placeholder="YOUR E-MAIL">
 				<button><i class="fa fa-check" aria-hidden="true"></i></button>
 			</form>
 		</div>
